Update 2. 소프트웨어 개발.md

--- a/CS/2. 소프트웨어 개발.md
+++ b/CS/2. 소프트웨어 개발.md
@@ -8,6 +8,14 @@
 # Chapter 02 통합 구현
 ## 01 모듈 구현
 ## 02 통합 구현 관리
+> - IDE 도구
+> - 협업도구
+> - 소프트웨어 형상 관리
+> - 형상 관리 기능
+> - 형상 관리 도구
+> - 소프트웨어 재사용
+> - 소프트웨어 재공학
+> - 리팩토링 Refactorying
 
 # Chapter 03 제품 소프트웨어 패키징
 ## 01 제품 소프트웨어 패키징
