--- a/CS/1-3. 애플리케이션 설계.md
+++ b/CS/1-3. 애플리케이션 설계.md
@@ -3,13 +3,13 @@
 ### 객체 지향 기본 개념
 | 객체 지향 기본 개념 | 정의|
 |:-:|:-|
-|객체|객체 지향 프로그램 작성 시 기본 단위, `객체 = 데이터(속성) + 연산(메소드)` |
-|속성| 객체가 가지고 있는 특성/성질/상태/분류/식별/수량|
-|클래스| **데이터 추상화 단위**로 객체 타입으로 구현된 소프트웨어, **공통된 행위와 특성을 갖는 객체 집합**, 동일한 타입의 객체들의 메소드와 변수 정의하는 템플릿 |
-|메시지| 한 객체가 다른 객체의 메소드를 부르는 과정 (일반 프로그래밍에서의 함수 호출 기능)|
-|메소드| 객체가 메시지를 받아 실행해야할 객체의 구체적인 연산(동작) 정의한 것으로, 속성값을 변경시킴 |
-|인스턴스| 클래스로부터 만들어진 객체, 인스턴스화|
-|다형성| 같은 메시지에 대해 각 클래스가 가진 고유한 방법으로 응답할 수 있는 능력, 두 개 이상의 클래스에서 똑같은 메시지에 대해 객체가 서로 다르게 반응, 동적 바인딩에 의해 실현됨 |
-|상속성| 새로운 클래스 정의할 때 기존의 클래스들의 속성을 상속받고 필요한 부분 추가하는 방법, 코드 재사용성  |
-|캡슐화| 객체 정의할 때 **서로 연관된 데이터 함수를 묶어 외부와 경계**를 만들고 필요한 인터페이스만 밖으로 드러내는 과정, 인터페이스 단순화, 변경 발생 시 오류의 적은 파급효과, 소프트웨어 재사용성 |
-|정보은닉| 객체의 자세한 내용을 외부에 철저히 숨기고, 단순히 메시지만으로 객체와의 상호작용을 하는 것|
+|객체 Object|객체 지향 프로그램 작성 시 기본 단위, `객체 = 데이터(속성) + 연산(메소드)` |
+|속성 Attribute| 객체가 가지고 있는 특성/성질/상태/분류/식별/수량|
+|**클래스 Class**| **데이터 추상화 단위**로 객체 타입으로 구현된 소프트웨어, **공통된 행위와 특성을 갖는 객체 집합**, 동일한 타입의 객체들의 메소드와 변수 정의하는 템플릿 |
+|**메시지 Message**| 한 객체가 다른 객체의 메소드를 부르는 과정 (일반 프로그래밍에서의 함수 호출 기능)|
+|메소드 Method| 객체가 메시지를 받아 실행해야할 객체의 구체적인 연산(동작) 정의한 것으로, 속성값을 변경시킴 |
+|**인스턴스 Instance**| 클래스로부터 만들어진 객체, 인스턴스화|
+|다형성 Polymorphism| 같은 메시지에 대해 각 클래스가 가진 고유한 방법으로 응답할 수 있는 능력, 두 개 이상의 클래스에서 똑같은 메시지에 대해 객체가 서로 다르게 반응, 동적 바인딩에 의해 실현됨 |
+|**상속성 Inheritance**| 새로운 클래스 정의할 때 기존의 클래스들의 속성을 상속받고 필요한 부분 추가하는 방법, 코드 재사용성  |
+|**캡슐화 Encapsulation**| 객체 정의할 때 **서로 연관된 데이터 함수를 묶어 외부와 경계를 만들고 필요한 인터페이스만 밖으로 드러내는 과정**, 인터페이스 단순화, 변경 발생 시 오류의 적은 파급효과, 소프트웨어 재사용성 |
+|**정보은닉 Information Hiding**| 객체의 자세한 내용을 외부에 철저히 숨기고, 단순히 메시지만으로 객체와의 상호작용을 하는 것|
