Update 1-3. 애플리케이션 설계.md

--- a/CS/1-3. 애플리케이션 설계.md
+++ b/CS/1-3. 애플리케이션 설계.md
@@ -1,6 +1,6 @@
 
 
-### 객체 지향 기본 개념
+## 객체 지향 기본 개념
 | 객체 지향 기본 개념 | 정의|
 |:-:|:-|
 |객체 Object|객체 지향 프로그램 작성 시 기본 단위, `객체 = 데이터(속성) + 연산(메소드)` |
@@ -13,3 +13,5 @@
 |**상속성 Inheritance**| 새로운 클래스 정의할 때 기존의 클래스들의 속성을 상속받고 필요한 부분 추가하는 방법, 코드 재사용성  |
 |**캡슐화 Encapsulation**| 객체 정의할 때 **서로 연관된 데이터 함수를 묶어 외부와 경계를 만들고 필요한 인터페이스만 밖으로 드러내는 과정**, 인터페이스 단순화, 변경 발생 시 오류의 적은 파급효과, 소프트웨어 재사용성 |
 |**정보은닉 Information Hiding**| 객체의 자세한 내용을 외부에 철저히 숨기고, 단순히 메시지만으로 객체와의 상호작용을 하는 것|
+
+## 디자인 패턴
