Update 2-5. 인터페이스 구현.md

--- a/CS/2-5. 인터페이스 구현.md
+++ b/CS/2-5. 인터페이스 구현.md
@@ -1,3 +1,20 @@
+
+## 01 인터페이스 설계 확인
+### 💯 데이터 표준 확인
+#### 인터페이스 데이터 표준
+- 이질적인 시스템 간 의사소통(송수신) 시 데이터 형식이 맞지 않는 경우
+#### EAI 개념
+> - Enterprise Application **Integration** 기업 내/외부 정보 시스템 통합
+> - **기업 내/외부 애플리케이션 사이의 통합을 위해 제공되는 프로세스, 기술 및 툴의 집합** 
+#### EAI 구축 유형
+|EAI 구축 유형| 설명|
+|:-:|:-|
+|**Point-to-Pint**| 1:1 방식으로 애플리케이션 통합 수행|
+|Hub&Spoke| 모든 데이터 **허브**를 통해 전송해 데이터 전송 보장, **유지보수 비용 절감**|
+|메시지 버스 Message Bus| 데이터를 전송하는 버스 이용해 **병목현상** 발생 가능, **대량**의 데이터 교환에 적합, 애플리케이션 사이 **미들웨어** 두어 처리 |
+|하이브리드 Hybrid|Hub&Spoke + 메시지 버스 Message Bus, 유연한 통합 작업 가능, 필요한 경우 한 가지 방식으로 EAI구현 가능, 데이터 병목 현상, 최소화 가능
+
+
 ### 💯 인터페이스 명세
 - 인터페이스 정의서 : 송신 시스템과 수신 시스템 간의 인터페이스 현황 작성
 #### 인터페이스 구현 검증 도구
@@ -6,7 +23,7 @@
 |테스트 프레임 워크| 설명|
 |:-:|:-|
 |**xUnit**| Java, C++, Net 등 다양한 언어를 지원하는 단위 테스트 프레임워크|
-|**STAF**|서비스 호출, 컴포넌트 재사용 등 다양한 환경 지원하는 테스트 프레임워크|
+|**STAF**|**서비스 호출, 컴포넌트 재사용** 등 다양한 환경 지원하는 테스트 프레임워크, 각 테스트 대상 분산 환경에 **데몬**을 사용해 대상 프로그램을 통해 테스트를 수행하고, 통합해 자동화하는 검증 도구|
 |**FitNesse**| 웹 기반 테스트 설계/실행/결과 확인 등 지원하는 테스트 프레임워크|
 |**NTAF**|NHN 테스트 자동화 프레임워크, STAF+FitNesse|
 |**Selenium**|다양한 브라우저 지원 및 개발 언어 지원하는 웹 애플리케이션 테스트 프레임 워크|
